# bridle-tutorials

./: .pre-commit-config.yaml  .rstcheck.cfg  CONTRIBUTING.md  README.md  dpkg-python3-reqirements.txt  pyproject.toml
cytron-maker-rp2040/: Makefile
cytron-maker-rp2040/source/: conf.py  roles.txt  todo.rst
cytron-maker-rp2040/source/0010-gs/: index.rst
cytron-maker-rp2040/source/0020-helloshell/: index.rst
cytron-maker-rp2040/source/0030-demo/: index.rst
cytron-maker-rp2040/source/0040-dts/: index.rst
cytron-maker-rp2040/source/_assets/: 00-comefrom  CP-cytron_maker_pi_rp2040-en_US-8.2.9.uf2  GS-cytron_maker_pi_rp2040-uartcons-blinky.uf2  GS-cytron_maker_pi_rp2040-uartcons-button.uf2  GS-cytron_maker_pi_rp2040-uartcons-fade_led.uf2  GS-cytron_maker_pi_rp2040-usbcons-button.uf2  GS-cytron_maker_pi_rp2040-usbcons-led_ws2812.uf2  MP-RPI_PICO-20240125-v1.23.0-preview.66.g307ecc570.dirty.uf2  ZD-cytron_maker_pi_rp2040-usbcons-basic-blinky.uf2  ZD-cytron_maker_pi_rp2040-usbcons-basic-blinky_pwm.uf2  ZD-cytron_maker_pi_rp2040-usbcons-basic-button.uf2  ZD-cytron_maker_pi_rp2040-usbcons-basic-fade_led.uf2  ZD-cytron_maker_pi_rp2040-usbcons-basic-servo.uf2  ZD-cytron_maker_pi_rp2040-usbcons-bridle-buzzer-cmajor.uf2  ZD-cytron_maker_pi_rp2040-usbcons-bridle-buzzer.uf2  ZD-cytron_maker_pi_rp2040-usbcons-drivers-adc.uf2  ZD-cytron_maker_pi_rp2040-usbcons-sensor-bme280.uf2  ZS-cytron_maker_pi_rp2040-usbcons-helloshell-bmp280.uf2  ZS-cytron_maker_pi_rp2040-usbcons-helloshell.uf2  grove_i2c-bmp280@77.overlay  makerpi-btn_gp3.overlay  makerpi-led_gp5.overlay  (+2 more)
(+146 files in other folders)
